# spot-gazer-backend

./: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  build.sh  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  test_data.json
django_core/: celery.py  settings.py  urls.py
docs/: README.md
livemap/: admin.py  apps.py  drf_views.py  models.py  serializers.py  tasks.py  urls.py  views.py
livemap/drf/: serializers.py  views.py
livemap/migrations/: 0001_initial.py  0002_alter_address_city_alter_city_country_and_more.py  0002_videostreamsource_in_use_until.py  0003_alter_address_options_alter_city_options_and_more.py  0003_remove_videostreamsource_parking_zone.py  0004_alter_videostreamsource_in_use_until.py  0005_hourlyoccupancysummary.py
tests/: __init__.py
tests/livemap/: test_api_endpoints.py  test_models.py  test_tasks.py  test_views.py
