[project]
name = "spot-gazer-backend"
version = "0.1.0"
description = "Backend service for the parking lot occupancy recognition system"
authors = [{ name = "AKrekhovetskyi", email = "akrechovetskiy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-debug-toolbar>=5.2.0",
    "folium>=0.20.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
faker = "^37.4.0"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
